Actualizacion del codigo para que funcione con la seguridad de secuure-express-api, ahora la api funciona con dicha seguirad y por medio de cookies HTTPOnly
